# pkg/routes/budgets.go
@@ -48,3 +48,44 @@ func PostGetBudgets(w http.ResponseWriter, r *http.Request) {
 	(w).WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(response)
 }
+
+// PostLoadBudgets godoc
+// @Summary Создание задач, на загрузку бюджетов.
+// @Description Создание задач, на загрузку бюджетов, за выбранный период.
+// @ID routes-load-budgets
+// @Tags Сделки
+// @Param body body models.BudgetLoadRequest true  "Запрос"
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.CommonResponse
+// @Router /api/v1/budgets/load [post]
+func PostLoadBudgets(w http.ResponseWriter, r *http.Request) {
+	setupResponse(&w, r)
+	if (*r).Method == "OPTIONS" {
+		(w).WriteHeader(http.StatusOK)
+		return
+	}
+	var request models.BudgetLoadRequest
+	err := json.NewDecoder(r.Body).Decode(&request)
+	if err != nil {
+		(w).WriteHeader(http.StatusBadRequest)
+		var response = utils.FieldValidateErrorType{
+			Field:   "id",
+			Message: fmt.Sprintf(`Ошибка %s`, err.Error()),
+		}
+		json.NewEncoder(w).Encode(response)
+		return
+	}
+	response, err := request.InitTasks()
+	if err != nil {
+		(w).WriteHeader(http.StatusBadRequest)
+		var response = utils.FieldValidateErrorType{
+			Field:   "request",
+			Message: fmt.Sprintf(`Ошибка %s`, err.Error()),
+		}
+		json.NewEncoder(w).Encode(response)
+		return
+	}
+	(w).WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(response)
+}
