# pkg/routes/ranks.go
@@ -48,3 +48,44 @@ func PostGetRanks(w http.ResponseWriter, r *http.Request) {
 	(w).WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(response)
 }
+
+// PostLoadRanks godoc
+// @Summary Создание задач, на загрузку рангов размещения.
+// @Description Создание задач, на загрузку рангов размещения.
+// @ID routes-load-ranks
+// @Tags Справочники
+// @Param body body models.RanksLoadRequest true  "Запрос"
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.CommonResponse
+// @Router /api/v1/ranks/load [post]
+func PostLoadRanks(w http.ResponseWriter, r *http.Request) {
+	setupResponse(&w, r)
+	if (*r).Method == "OPTIONS" {
+		(w).WriteHeader(http.StatusOK)
+		return
+	}
+	var request models.RanksLoadRequest
+	err := json.NewDecoder(r.Body).Decode(&request)
+	if err != nil {
+		(w).WriteHeader(http.StatusBadRequest)
+		var response = utils.FieldValidateErrorType{
+			Field:   "id",
+			Message: fmt.Sprintf(`Ошибка %s`, err.Error()),
+		}
+		json.NewEncoder(w).Encode(response)
+		return
+	}
+	response, err := request.InitTasks()
+	if err != nil {
+		(w).WriteHeader(http.StatusBadRequest)
+		var response = utils.FieldValidateErrorType{
+			Field:   "request",
+			Message: fmt.Sprintf(`Ошибка %s`, err.Error()),
+		}
+		json.NewEncoder(w).Encode(response)
+		return
+	}
+	(w).WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(response)
+}
